<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rLevel2">

    <LinearLayout
        android:id="@+id/quiz_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tittle2"
            android:layout_width="675dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/b6"
            android:freezesText="true"
            android:gravity="left"
            android:text="@string/tittle2"

            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/paragraph1"
            android:layout_width="wrap_content"
            android:layout_height="496dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/x1"
            android:freezesText="true"
            android:gravity="center"
            android:lineSpacingExtra="14sp"
            android:text="@string/para2"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/q2"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:background="@drawable/x1"
            android:text="@string/q2"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupQ1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/linearLayout4"
            android:layout_alignRight="@+id/linearLayout4"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
           >

            <RadioButton
                android:id="@+id/radioButton1Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:text="@string/q2a1" />

            <RadioButton
                android:id="@+id/radioButton2Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton"
                android:text="@string/q2a2" />

            <RadioButton
                android:id="@+id/radioButton3Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton2"
                android:text="@string/q2a3" />

            <RadioButton
                android:id="@+id/radioButton4Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton3"
                android:layout_alignStart="@+id/radioButton3"
                android:layout_alignLeft="@+id/radioButton3"
                android:text="@string/q2a4" />
        </RadioGroup>

        <TextView
            android:id="@+id/q3"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/x1"
            android:text="@string/q3"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupQ2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/linearLayout4"
            android:layout_alignRight="@+id/linearLayout4"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
           >

            <RadioButton
                android:id="@+id/radioButton1Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:text="@string/q3a1" />

            <RadioButton
                android:id="@+id/radioButton2Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton"
                android:text="@string/q3a2" />

            <RadioButton
                android:id="@+id/radioButton3Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton2"
                android:text="@string/q3a3" />

            <RadioButton
                android:id="@+id/radioButton4Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton3"
                android:layout_alignStart="@+id/radioButton3"
                android:layout_alignLeft="@+id/radioButton3"
                android:text="@string/q3a4" />
        </RadioGroup>

        <TextView
            android:id="@+id/q4"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:background="@drawable/x1"
            android:text="@string/q4"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupQ3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/linearLayout4"
            android:layout_alignRight="@+id/linearLayout4"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            >

            <RadioButton
                android:id="@+id/radioButton1Q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:text="@string/q4a1" />

            <RadioButton
                android:id="@+id/radioButton2Q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton"
                android:text="@string/q4a2" />

            <RadioButton
                android:id="@+id/radioButton3Q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton2"
                android:text="@string/q4a3" />

            <RadioButton
                android:id="@+id/radioButton4Q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton3"
                android:layout_alignStart="@+id/radioButton3"
                android:layout_alignLeft="@+id/radioButton3"
                android:text="@string/q4a4" />
        </RadioGroup>

        <TextView
            android:id="@+id/q5"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:background="@drawable/x1"
            android:text="@string/q5"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupQ4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/linearLayout4"
            android:layout_alignRight="@+id/linearLayout4"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
          >

            <RadioButton
                android:id="@+id/radioButton1Q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:text="@string/q5a1" />

            <RadioButton
                android:id="@+id/radioButton2Q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton"
                android:text="@string/q5a2" />

            <RadioButton
                android:id="@+id/radioButton3Q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton2"
                android:text="@string/q5a3" />

            <RadioButton
                android:id="@+id/radioButton4Q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton3"
                android:layout_alignStart="@+id/radioButton3"
                android:layout_alignLeft="@+id/radioButton3"
                android:text="@string/q5a4" />
        </RadioGroup>

        <TextView
            android:id="@+id/q6"
            android:layout_width="664dp"
            android:layout_height="108dp"
            android:background="@drawable/x1"
            android:text="@string/q6"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupQ5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/linearLayout4"
            android:layout_alignRight="@+id/linearLayout4"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            >

            <RadioButton
                android:id="@+id/radioButton1Q5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:text="@string/q6a1" />

            <RadioButton
                android:id="@+id/radioButton2Q5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton"
                android:text="@string/q6a2" />

            <RadioButton
                android:id="@+id/radioButton3Q5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton2"
                android:text="@string/q6a3" />

            <RadioButton
                android:id="@+id/radioButton4Q5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton3"
                android:layout_alignStart="@+id/radioButton3"
                android:layout_alignLeft="@+id/radioButton3"
                android:text="@string/q6a4" />
        </RadioGroup>


        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout5"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/Question4"
            android:layout_toLeftOf="@+id/Question4"
            android:background="#FF006EA9"
            android:onClick="getScore"
            android:text="Submit"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </LinearLayout>

</ScrollView>