<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/x2"
    tools:context=".Adjectives_Adverbs">

    <LinearLayout
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/heading"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/adq1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adq1"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adq1" />

        <TextView
            android:id="@+id/adq2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adq2"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adq2" />

        <TextView
            android:id="@+id/adq3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adq3"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adq3" />

        <TextView
            android:id="@+id/adq4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adq4"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adq4" />

        <TextView
            android:id="@+id/adq5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adq5"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adq5" />

        <TextView
            android:id="@+id/adq6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adq6"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/answer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adq6" />

        <TextView
            android:id="@+id/adq7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adq7"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/answer6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adq7" />

        <TextView
            android:id="@+id/adq8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adq8"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/answer7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adq8" />

        <TextView
            android:id="@+id/adq9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adq9"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/answer8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adq9" />

        <TextView
            android:id="@+id/adq10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adq10"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/answer9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adq10" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/highlight"
            android:onClick="getScore"
            android:text="Submit"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</ScrollView>